plugins {
    id 'java'
}

group 'ch.szclsb'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':driver')
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
    jvmArgs("--enable-preview --enable-native-access=ch.szclsb.orbis.driver")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
